src/objects/Write_In__c.object
<CustomObject>
    <description>Object used for creating write-in quote generation in conjunction with Quote</description>
    <fields>
        <fullName>Action_Summary_Documented_and_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Summary Documented and Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Taken_or_Cancellation_Reason__c</fullName>
        <label>Action Taken or Cancellation Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Opportunity_Value__c</fullName>
        <formula>Opportunity__r.Actual_Opportunity_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Added_to_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checkbox to track which write-ins have been added to the quoting tool.</inlineHelpText>
        <label>Added to Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Hardware_System_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Hardware/System Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Required__c</fullName>
        <inlineHelpText>If necessary, enter any additional information required to complete this CWI request.  These are internal notes back to the requestor.</inlineHelpText>
        <label>Additional Information Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_of_Request__c</fullName>
        <description>Age of CWI</description>
        <formula>IF(Date_Completed__c &lt;=TODAY(), Date_Completed__c - Date_of_Request__c, TODAY() - Date_of_Request__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If closed: Date of Request to Completed date. If Open: Date of Request to Today</inlineHelpText>
        <label>Age of Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Inactive_Contact__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Work_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Contact_Phone__c</fullName>
        <formula>Agency_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_State__c</fullName>
        <formula>/*TEXT(Quote_Proposal__r.Apttus_Proposal__Account__r.Mailing_Billing_State_WMP__c)*/
 TEXT(Opportunity__r.Account.Shipping_State_WMP__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Type__c</fullName>
        <label>Agency Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>Billing Services</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>College/University</fullName>
                </value>
                <value>
                    <fullName>Combination</fullName>
                </value>
                <value>
                    <fullName>Corrections</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>DOT</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Fire/EMS</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Multi-Agency</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner/Vendor</fullName>
                </value>
                <value>
                    <fullName>Police</fullName>
                </value>
                <value>
                    <fullName>Prison</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Sheriff</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Systems Integrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>/*Quote_Proposal__r.Apttus_Proposal__Account__r.Name*/
 Opportunity__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Pricing_Assumptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Pricing Assumptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_Product_Modifications_Required__c</fullName>
        <label>Are Product Modifications Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Write_In1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>99.9%</fullName>
                </value>
                <value>
                    <fullName>99.99%</fullName>
                </value>
                <value>
                    <fullName>99.999%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BA_PdM_Analysis_Design_Hours__c</fullName>
        <label>BA/PdM Analysis &amp; Design Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CWI_Deliverable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This box supports the contract capture process by identifying which final CWI&apos;s are included. It is checked by default on all CWI&apos;s. Unchecking the box excludes the CWI in the final contract, especially when the CWI is associated with an RFx.</inlineHelpText>
        <label>CWI Deliverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CWI_Status__c</fullName>
        <label>CWI Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Additional Information</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Approved - Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_be_delivered_prior_to_end_of_2016__c</fullName>
        <description>Tiburon specific - custom items must be deliverable by end of 2016</description>
        <inlineHelpText>Must be answered for all Tiburon CWI requests. If no, CWI will be denied.</inlineHelpText>
        <label>Can be delivered prior to end of 2016?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Interface__c</fullName>
        <inlineHelpText>1-Simple export;TT format;single mod
2-Export/import;TT format;defined interval w/o ext validation
3-Data exchange w/o ext validation;trigger or event single mod
4-External submission w/validation
5-Mod complex w/some validation
6-Complex exchange</inlineHelpText>
        <label>Category Interface</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category 1</fullName>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                </value>
                <value>
                    <fullName>Category 3</fullName>
                </value>
                <value>
                    <fullName>Category 4</fullName>
                </value>
                <value>
                    <fullName>Category 5</fullName>
                </value>
                <value>
                    <fullName>Category 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Functional_Matrix_with_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Functional Matrix with Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configuration_Request_Form_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configuration Request Form Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_RMS_Production_Svr_OS_Version__c</fullName>
        <label>Current RMS Production Svr OS Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_RMS_Production_Svr_SQL_Version__c</fullName>
        <label>Current RMS Production Svr SQL Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_VisionRMS_Modules_Used__c</fullName>
        <label>Current VisionRMS Modules Used:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arrest</fullName>
                </value>
                <value>
                    <fullName>Bicycle Registration</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Citation</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Custody</fullName>
                </value>
                <value>
                    <fullName>DMV (Crash)</fullName>
                </value>
                <value>
                    <fullName>Field Interview</fullName>
                </value>
                <value>
                    <fullName>Gun Permits</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Intelligence</fullName>
                </value>
                <value>
                    <fullName>Log</fullName>
                </value>
                <value>
                    <fullName>Pawn Ticket</fullName>
                </value>
                <value>
                    <fullName>Property and Evidence</fullName>
                </value>
                <value>
                    <fullName>Tow/Impound</fullName>
                </value>
                <value>
                    <fullName>Warrants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Engineering_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Engineering Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Transfer_Action__c</fullName>
        <label>Data Transfer Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Real-Time</fullName>
                </value>
                <value>
                    <fullName>Schedule/Batch</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Engineering__c</fullName>
        <label>Date Sent to Engineering</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_Objective_of_the_Needed_Support__c</fullName>
        <label>Describe Objective of the Needed Support</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_any_Special_Requirements__c</fullName>
        <label>Describe any Special Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_the_Expected_User_Experience__c</fullName>
        <label>Describe the Expected User Experience</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disaster_Recovery__c</fullName>
        <label>Disaster Recovery?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documentation_Translation_Hours__c</fullName>
        <label>Documentation &amp; Translation Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_Client_Currently_Use_Barcoding__c</fullName>
        <label>Does Client Currently Use Barcoding?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_Currently_Use_GeoComm__c</fullName>
        <label>Does Client Currently Use GeoComm?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_Currently_Use_IQ__c</fullName>
        <label>Does Client Currently Use IQ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_Currently_Use_VisionCAD__c</fullName>
        <label>Does Client Currently Use VisionCAD?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_Currently_Use_VisionFBR__c</fullName>
        <label>Does Client Currently Use VisionFBR?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_Currently_Use_VisionJAIL__c</fullName>
        <label>Does Client Currently Use VisionJAIL?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_Currently_Use_VisionMobile__c</fullName>
        <inlineHelpText>Clients using VisionMobile &amp; VisionFBR: Verify if their state receives parsed DMV returns: CA, CT, FL, GA, IL, IN, MI, MN, NC, OH, PA, SC, TN, TX, VA, WI, WV
If yes, they will be required to purchase services to implement TTMS to prevent data losses</inlineHelpText>
        <label>Does Client Currently Use VisionMobile?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Client_have_Test_Training_for_RMS__c</fullName>
        <label>Does Client have Test/Training for RMS?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Test and Training</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dummyrecordtouchfield__c</fullName>
        <label>Dummyrecordtouchfield</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Opportunity_Owner_Manager__c</fullName>
        <label>Email - Opportunity Owner Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Opportunity_Owner__c</fullName>
        <label>Email - Opportunity Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Opportunity_Pricing_Manager__c</fullName>
        <label>Email - Opportunity Pricing Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Engineering_Hours__c</fullName>
        <label>Engineering Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exceeds_Permissible_Effort_Cap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For CWIs involving FACTS/IMS and Copperfire: More than 120 hours exceeds the permissible effort cap. Reduce hours or deny CWI.</description>
        <inlineHelpText>For CWIs involving FACTS/IMS and Copperfire: More than 120 hours exceeds the permissible effort cap. Reduce hours or deny CWI.</inlineHelpText>
        <label>Exceeds Permissible Effort Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSA_PM_Cost__c</fullName>
        <description>Used for CWI Project Management calculations - GSA quote specific</description>
        <formula>GSA_PM_List_Price__c / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSA PM Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GSA_PM_List_Price__c</fullName>
        <description>Used for CWI Project Management calculations - GSA quote specific</description>
        <formula>PM_Duration_Months__c * 150 * PM_Percent_Allocation__c * 157.50</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSA PM List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Funded_Interface__c</fullName>
        <label>Grant Funded Interface?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hardware_Cost__c</fullName>
        <label>Hardware Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardware_Documentation_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hardware Documentation Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardware_List_Price__c</fullName>
        <label>Hardware List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_many_depts_use_VisionRMS_today__c</fullName>
        <label>How many depts use VisionRMS today?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hyperconverged_Nutanix_Quoted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will ensure that this quote is protected by Nutanix through eGroup.</inlineHelpText>
        <label>Hyperconverged Nutanix Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_client_uses_IQ_what_version__c</fullName>
        <label>If client uses IQ, what version?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_client_uses_VisionJAIL_what_version__c</fullName>
        <label>If client uses VisionJAIL, what version?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_not_using_NIBRS_planning_to_migrate__c</fullName>
        <label>If not using NIBRS, planning to migrate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inform_PM_Cost__c</fullName>
        <description>Used for CWI Project Management calculations - Inform quote specific</description>
        <formula>Inform_PM_List_Price__c / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inform PM Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inform_PM_List_Price__c</fullName>
        <description>Used for CWI Project Management calculations - Inform quote specific</description>
        <formula>PM_Duration_Months__c * 150 * PM_Percent_Allocation__c * 175.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inform PM List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interface_Direction__c</fullName>
        <label>Interface Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Publish</fullName>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Bidirectional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Engineering_Notes__c</fullName>
        <label>Internal Engineering Notes</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Client_Currently_Using_NIBRS__c</fullName>
        <label>Is Client Currently Using NIBRS?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Itemized_List_of_RFP_Exceptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Itemized List of RFP Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Itemized_Price_Quotation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Itemized Price Quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Known_Hardware_Vendor_Preference__c</fullName>
        <label>Known Hardware Vendor Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Stratus</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Jurisdiction_Agency_Support__c</fullName>
        <inlineHelpText>Is Multi-Jurisdiction or Multi-Agency Support required?</inlineHelpText>
        <label>Multi-Jurisdiction/Agency Support?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>